--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
 
     implementation 'com.mikhaellopez:circularimageview:3.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
