--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IvanChat"
         tools:targetApi="31">
+        <service
+            android:name=".notifications.ChatMessagingService"
+            android:permission="com.google.android.c2dm.permission.SEND"
+            android:enabled="true"
+            android:exported="false">
+
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+            </intent-filter>
+
+        </service>
+
         <activity
             android:name=".selectfriend.SelectFriendActivity"
             android:exported="false" />
